fix horizontal overflow issue

--- a/src/css/components/_blurb.scss
+++ b/src/css/components/_blurb.scss
@@ -18,7 +18,6 @@
 	align-content: center;
 	justify-content: center;
         max-width: var(--content-width);
-        width: 100%;
 	height: 90vh;
 	min-height: 500px;
         padding: 0 var(--gutter);
