--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -4,7 +4,6 @@
 
     &__inner {
         max-width: var(--content-width);
-        width: 100%;
         padding: calc(var(--gutter) / 2) var(--gutter);
         margin: 0 auto;
         display: flex;
