--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -9,7 +9,6 @@
     &__inner {
         display: flex;
         max-width: var(--content-width);
-        width: 100%;
         padding: 0 var(--gutter);
         margin: 0 auto;
     }
