--- a/src/css/components/_projects.scss
+++ b/src/css/components/_projects.scss
@@ -3,7 +3,6 @@
 
     &__inner {
         max-width: var(--content-width);
-        width: 100%;
         padding: 0 var(--gutter);
         margin: 0 auto;
 
